--- a/src/app/dynamic-ag-grid/dynamic-ag-grid.component.html
+++ b/src/app/dynamic-ag-grid/dynamic-ag-grid.component.html
@@ -1,34 +1,13 @@
-<!-- Default Search bar -->
-<form role="search" >
-    <input class="form-control searchBar" type="search" id="searchFeature" placeholder="&#xf002;   Search" (input)="onFilterTextBoxChanged()">
-</form>
+<h5>Dynamic AG-Grid</h5>
 
 <!-- Create AG Grid Table -->
 <ag-grid-angular
-    style="width: 80%;"
+    style="width: 80%"
     class="ag-theme-alpine"
     [rowData]="rowData"
-    [rowHeight]="rowHeight"
     [columnDefs]="columnDefs"
-    [defaultColDef]="defaultColDef"
-    [pagination]="true"
-    [paginationPageSize]="paginationPageSize"
-    [paginationNumberFormatter]="paginationNumberFormatter"
-    [suppressMenuHide]="true"
     domLayout='autoHeight'
-    (gridReady)="onGridReady($event)"
-    [cacheQuickFilter]="true"
-    [excludeHiddenColumnsFromQuickFilter] = "true"
     >
 </ag-grid-angular>
-  
-<div class="pageCount">
-    Page Size:
-    <select (change)="onPageSizeChanged()" id="pageSize">
-        <option value="5" selected="true">Default</option>
-        <option value="2">2</option>
-        <option value="8">8</option>
-        <option value="15">15</option>
-    </select>
-</div>
+
 
