--- a/src/app/dynamic-ag-grid/dynamic-ag-grid.component.css
+++ b/src/app/dynamic-ag-grid/dynamic-ag-grid.component.css
@@ -1,18 +1,18 @@
 .ag-theme-alpine {
     /* position: relative; */
-    border: 1.5px solid  rgba(0, 0, 0, 0.521);
+    border: 1.5px solid  rgba(41, 217, 9, 0.974);
     border-collapse: separate;
     border-spacing: 0;
-    border-left: 0.5px solid  rgba(0, 0, 0, 0.13);
+    border-left: 0.5px solid  rgba(56, 212, 4, 0.745);
     border-radius: 15px;
     overflow: hidden; 
     box-shadow: 5px 5px 5px rgba(59, 59, 59, 0.521);
     margin:0;
-    margin-top: 6rem;
+    margin-top: 3%;
     margin-left: 9rem;
     --ag-odd-row-background-color: #D9D9D9;
-    --ag-header-background-color: rgb(109, 188, 169);
-    --ag-row-hover-color: rgba(8, 128, 78, 0.349);
+    --ag-header-background-color: rgba(82, 181, 62, 0.648);
+    --ag-row-hover-color: rgba(160, 211, 154, 0.696);
     --ag-range-selection-border-color:transparent;
     --ag-row-border:none;
     --ag-header-column-separator-display:border;
@@ -42,31 +42,9 @@
     text-overflow: ellipsis;
 }
 
-/* Default Search bar styles */
-.searchBar,.form-control{
-    position: absolute;
-    top: 5%;
-    right: 11%;
-    width: 20%;
-    background-color: rgb(224, 224, 224);
-    color: #202020;
-    font-family:Arial, FontAwesome;
-
+h5{
+    margin-top: 3%;
+    text-align: center;
 }
 
-/* Page Count Formatter Styles */
-.pageCount{
-    margin-left: 9rem;
-    margin-top: 1.5rem;
-    font-style: italic;
-    font-weight: bold;
-}
 
-#pageSize{
-    font-style: italic;
-    width: max-content;
-    border-color: #00093d;
-    border-radius: 5%;
-    overflow: hidden;
-    margin-left: 8px;
-}
