--- a/src/app/customized-cr-ag-grid/customized-cr-ag-grid.component.html
+++ b/src/app/customized-cr-ag-grid/customized-cr-ag-grid.component.html
@@ -1,6 +1,8 @@
 <h5>AG-Grid with Customized Columns & Rows</h5>
 
-<button class="btn addRow" (click)="addNewRow()">Add New Row</button>
+<button class="btn addcolumn" (click)="toggleColumnVisibility()"><span id="icon"><i class="fa-solid fa-eye"></i></span> More Info</button>
+
+<button class="btn addRow" (click)="addNewRow()"><i class="fa-solid fa-plus"></i> Add New Row</button>
 
 <!-- Create AG Grid Table -->
     <ag-grid-angular
