--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,15 @@
 @import "ag-grid-community/styles/ag-theme-alpine.css";
 
 html, body {
-    height: 100%;
-    width: 100%;
     padding: 5px;
     box-sizing: border-box;
     -webkit-overflow-scrolling: touch;
- }
+}
+
+h5{
+    margin-top: 3%;
+    text-align: center;
+}
 
  
  
