--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,18 @@
 <a href="https://www.ag-grid.com/" target="_blank"><h3>AG-Grid<img src="https://blog.ag-grid.com/content/images/2021/11/200pxArtboard-5.png" class="agGridLogo"></h3></a>
 <div class="intro"><p>
-    Ag-Grid is a feature-rich JavaScript library that provides developers with a highly customizable and performant 
-    data grid for web applications. It is designed to handle large datasets and offers a wide range of functionalities, 
+    Ag-Grid is a feature-rich JavaScript library that provides developers with a highly customizable and performant
+    data grid for web applications. It is designed to handle large datasets and offers a wide range of functionalities,
     making it a popular choice for building complex grid interfaces.</p><p>
-    With Ag-Grid, developers can easily display, sort, filter, and edit tabular data. It supports various features such 
-    as column grouping, pinning, resizing, and reordering, enabling users to efficiently navigate and manipulate data. 
-    The library also offers advanced features like row selection, virtual scrolling, and server-side pagination, which 
-    optimize performance when dealing with large amounts of data. Ag-Grid is framework-agnostic (can be used with different 
-    JavaScript frameworks and libraries) and can be implemented using the following technologies.</p> 
+    With Ag-Grid, developers can easily display, sort, filter, and edit tabular data. It supports various features such
+    as column grouping, pinning, resizing, and reordering, enabling users to efficiently navigate and manipulate data.
+    The library also offers advanced features like row selection, virtual scrolling, and server-side pagination, which
+    optimize performance when dealing with large amounts of data. Ag-Grid is framework-agnostic (can be used with different
+    JavaScript frameworks and libraries) and can be implemented using the following technologies.</p>
     <div class="row">
         <div class="col-sm-3">
             <a href="https://www.ag-grid.com/javascript-data-grid/getting-started/" target="_blank">
             <div class="card">
-                <img class="card-img-top" src="https://www.ag-grid.com/static/javascript-63a7be100cadd83322fc020c36820172.svg" alt="Card image cap">
+                <img class="card-img-top" src="https://www.ag-grid.com/_astro/javascript.DOqolN0O.svg" alt="Card image cap">
                 <div class="card-body">
                 <p class="card-text">JavaScript</p>
                 </div>
@@ -22,7 +22,7 @@
         <div class="col-sm-3">
             <a href="https://www.ag-grid.com/react-data-grid/getting-started/" target="_blank">
             <div class="card">
-                <img class="card-img-top" src="https://www.ag-grid.com/static/react-f098a313abafa8642511eabdfa6dfd8e.svg" alt="Card image cap">
+                <img class="card-img-top" src="https://www.ag-grid.com/_astro/react.CtDRhtxt.svg" alt="Card image cap">
                 <div class="card-body">
                 <p class="card-text">React</p>
                 </div>
@@ -32,7 +32,7 @@
         <div class="col-sm-3">
             <a href="https://www.ag-grid.com/angular-data-grid/getting-started/" target="_blank">
             <div class="card">
-                <img class="card-img-top" src="https://www.ag-grid.com/static/angular-e185415c50bc1885eed6c6cc9d2b009e.svg" alt="Card image cap">
+                <img class="card-img-top" src="https://www.ag-grid.com/_astro/angular.CZpVmV7c.svg" alt="Card image cap">
                 <div class="card-body">
                 <p class="card-text">Angular</p>
                 </div>
@@ -42,7 +42,7 @@
         <div class="col-sm-3">
             <a href="https://www.ag-grid.com/vue-data-grid/getting-started/" target="_blank">
             <div class="card">
-                <img class="card-img-top" src="https://www.ag-grid.com/static/vue-f9e57c613665512559b017097fd772de.svg" alt="Card image cap">
+                <img class="card-img-top" src="https://www.ag-grid.com/_astro/vue.Do-aiSqX.svg" alt="Card image cap">
                 <div class="card-body">
                 <p class="card-text">Vue</p>
                 </div>
